--- a/AI/QA.html
+++ b/AI/QA.html
@@ -3,41 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>問題提問區</title>
+    <title>教我解題</title>
     <style>
-        :root {
-            --primary-color: #4a90e2;
-            --hover-color: #357abd;
-            --background-color: #ffffff;
-            --secondary-color: #f0f4f8;
-            --text-color: #333;
-            --border-color: #ddd;
-            --correct-color: #28a745;
-            --wrong-color: #dc3545;
-        }
-
         body {
-            font-family: 'Microsoft JhengHei', sans-serif;
-            line-height: 1.6;
+            font-family: Arial, sans-serif;
             margin: 0;
-            padding: 20px;
-            background-color: var(--secondary-color);
+            padding: 0;
+            background-color: #f9f9f9;
+            color: #333;
         }
 
         .container {
-            max-width: 800px;
-            margin: 40px auto;
-            background: linear-gradient(to bottom right, #ffffff, #f8f9fa);
-            padding: 30px;
-            border-radius: 15px;
-            box-shadow: 0 8px 30px rgba(0, 0, 0, 0.1);
+            max-width: 600px;
+            margin: 30px auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
         }
 
         h1 {
+            font-size: 1.8rem;
+            margin-bottom: 20px;
             text-align: center;
-            color: var(--primary-color);
-            margin-bottom: 30px;
-            font-weight: bold;
+            color: #4CAF50;
         }
 
         .form-group {
@@ -46,163 +35,244 @@
 
         label {
             display: block;
+            font-size: 1rem;
             margin-bottom: 5px;
-            font-weight: bold;
-            color: var(--text-color);
         }
 
-        input[type="text"] {
+        input, textarea {
             width: 100%;
-            padding: 12px;
-            border: 1px solid var(--border-color);
-            border-radius: 8px;
-            font-size: 16px;
-            box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+            padding: 10px;
+            font-size: 1rem;
+            border: 1px solid #ccc;
+            border-radius: 4px;
         }
 
         .button-group {
-            display: flex;
-            justify-content: center;
-            gap: 10px;
+            text-align: center;
+            margin-top: 20px;
         }
 
         button {
-            background-color: var(--primary-color);
+            background-color: #4CAF50;
             color: white;
             border: none;
-            padding: 14px 28px;
-            border-radius: 8px;
+            padding: 10px 20px;
+            font-size: 1rem;
             cursor: pointer;
-            font-weight: bold;
-            font-size: 18px;
-            transition: background-color 0.3s, transform 0.2s;
+            border-radius: 4px;
         }
 
         button:hover {
-            background-color: var(--hover-color);
-            transform: scale(1.05);
+            background-color: #45a049;
         }
 
         .result-area {
-            display: none;
-            border: 1px solid var(--border-color);
-            padding: 20px;
-            border-radius: 8px;
             margin-top: 20px;
-            background-color: var(--background-color);
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            display: none;
+        }
+
+        .result-area .loading {
+            font-style: italic;
+            color: #888;
         }
 
         .question-card {
-            border: 1px solid var(--border-color);
-            border-radius: 12px;
-            padding: 20px;
-            margin-bottom: 20px;
-            background-color: var(--background-color);
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s, box-shadow 0.3s;
+            background-color: #f1f1f1;
+            padding: 15px;
+            border-radius: 4px;
+            margin-top: 10px;
         }
 
-        .question-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
+        .tab-switch {
+            display: flex;
+            justify-content: space-around;
+            margin-bottom: 10px;
         }
 
-        .loading {
+        .tab-button {
+            padding: 10px;
+            flex-grow: 1;
             text-align: center;
-            color: var(--text-color);
-            font-weight: bold;
-            font-size: 16px;
-            margin-top: 20px;
+            cursor: pointer;
+            background-color: #e9e9e9;
+            border: 1px solid #ccc;
+            border-radius: 4px 4px 0 0;
+        }
+
+        .tab-button.active {
+            background-color: #fff;
+            border-bottom: 2px solid #4CAF50;
+        }
+
+        .tab-content {
+            display: none;
+        }
+
+        .tab-content.active {
+            display: block;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>問題提問區</h1>
+    <h1>教我解題</h1>
 
-        <div class="form-group">
-            <label for="topic">請問的問題:</label>
-            <input type="text" id="topic" placeholder="請輸入您想問的問題" required>
-        </div>
-
-        <div class="button-group">
-            <button id="analyzeButton" onclick="analyzeQuestion()">分析問題</button>
-        </div>
-
-        <div id="resultArea" class="result-area"></div>
+    <div class="tab-switch">
+        <div id="imageTab" class="tab-button active" onclick="switchTab('image')">圖片上傳</div>
+        <div id="textTab" class="tab-button" onclick="switchTab('text')">文字輸入</div>
     </div>
 
-    <script>
+    <!-- 圖片上傳區域 -->
+    <div id="imageContent" class="tab-content active">
+        <div class="form-group">
+            <label for="uploadImage">上傳題目圖片：</label>
+            <input type="file" id="uploadImage" accept="image/*" onchange="previewImage(event)">
+            <div id="imagePreview" class="image-preview" style="margin-top: 15px; text-align: center;">
+                <!-- 圖片預覽區 -->
+            </div>
+        </div>
+    </div>
 
-function formatAnswerWithLineBreaks(answer) {
-    // 移除 ** 符號，並在句點、問號、驚嘆號後添加換行符號
-    const cleanedAnswer = answer.replace(/\*/g, ''); // 移除所有 **
-    return cleanedAnswer.replace(/([。？！])/g, '$1<br>');
-}
+    <!-- 文字輸入區域 -->
+    <div id="textContent" class="tab-content">
+        <div class="form-group">
+            <label for="textInput">輸入題目文字：</label>
+            <textarea id="textInput" rows="6" placeholder="請輸入題目內容"></textarea>
+        </div>
+    </div>
 
-async function analyzeQuestion() {
-    const topic = document.getElementById('topic').value.trim();
-    const button = document.getElementById('analyzeButton');
-    const resultArea = document.getElementById('resultArea');
+    <div class="button-group">
+        <button id="analyzeButton" onclick="analyzeInput()">分析題目</button>
+    </div>
 
-    if (!topic) {
-        alert('請填寫問題！');
-        return;
+    <div id="resultArea" class="result-area"></div>
+</div>
+
+<script>
+    // 切換標籤
+    function switchTab(tab) {
+        document.getElementById('imageContent').classList.toggle('active', tab === 'image');
+        document.getElementById('textContent').classList.toggle('active', tab === 'text');
+        document.getElementById('imageTab').classList.toggle('active', tab === 'image');
+        document.getElementById('textTab').classList.toggle('active', tab === 'text');
     }
 
-    button.innerText = '分析中，請稍候...';
-    button.disabled = true;
-    resultArea.style.display = 'block';
-    resultArea.innerHTML = '<p class="loading">分析中，請稍候...</p>';
-
-    try {
-        const response = await fetch(`https://generativelanguage.googleapis.com/v1/models/gemini-1.5-flash:generateContent?key=AIzaSyA5japu-01mqUn7EXxGDy1za098_leIxdQ`, {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json',
-            },
-            body: JSON.stringify({
-                contents: [{
-                    parts: [{
-                        text: `請扮演科學領域的教育專家和擅長講解的老師，回答與數學、物理、化學、生物、地球科學相關的問題。對於其他非科學問題，請回應：「請問與科學相關的問題，例如數學、物理、化學、生物或地球科學的問題。」\n回應時，請在句點（。）、問號（？）或驚嘆號（！）後適當換行，並移除 ** 符號，使回答更清晰易讀。\n回應格式為：\n{"answer":"回答內容"}\n若問題不屬於科學範疇，請直接使用上述非科學問題的回應內容。問題如下：${topic}`
-                    }]
-                }]
-            })
-        });
-
-        const data = await response.json();
-        if (data.candidates && data.candidates[0].content) {
-            const textContent = data.candidates[0].content.parts[0].text;
-            const jsonMatch = textContent.match(/\{[\s\S]*\}/);
-
-            if (jsonMatch) {
-                const parsedData = JSON.parse(jsonMatch[0]);
-                const answer = parsedData.answer || '無法獲取解答';
-
-                // 使用換行處理後的內容顯示答案
-                resultArea.innerHTML = `
-                    <div class="question-card">
-                        <p><strong>問題：</strong>${topic}</p>
-                        <p><strong>解答：</strong><br>${formatAnswerWithLineBreaks(answer)}</p>
-                    </div>
-                `;
-            } else {
-                throw new Error('無法解析回應格式');
-            }
+    // 預覽圖片
+    function previewImage(event) {
+        const file = event.target.files[0];
+        const preview = document.getElementById('imagePreview');
+        if (file) {
+            const reader = new FileReader();
+            reader.onload = function (e) {
+                preview.innerHTML = `<img src="${e.target.result}" alt="題目圖片" style="max-width: 100%; height: auto; border: 1px solid #ccc; border-radius: 8px;">`;
+            };
+            reader.readAsDataURL(file);
         } else {
-            throw new Error('API 回應格式不正確');
+            preview.innerHTML = '';
         }
-    } catch (error) {
-        resultArea.innerHTML = `<p class="loading">錯誤：${error.message}</p>`;
-    } finally {
-        button.innerText = '分析問題';
-        button.disabled = false;
     }
-}
 
-    </script>
+    // 分析輸入
+    async function analyzeInput() {
+        const imageInput = document.getElementById('uploadImage');
+        const textInput = document.getElementById('textInput');
+        const button = document.getElementById('analyzeButton');
+        const resultArea = document.getElementById('resultArea');
+
+        button.innerText = '分析中，請稍候...';
+        button.disabled = true;
+        resultArea.style.display = 'block';
+        resultArea.innerHTML = '<p class="loading">正在處理...</p>';
+
+        try {
+            let payload = {};
+            if (imageInput.files.length > 0 && document.getElementById('imageContent').classList.contains('active')) {
+                const base64Image = await convertImageToBase64(imageInput.files[0]);
+                payload = {
+                    contents: [
+                        {
+                            parts: [
+                                {
+                                    text: '請扮演該領域的專家，按照以下格式進行解題並回答：\n1. 題意分析：\n[清楚描述題目內容，並標示關鍵資訊]\n2. 相關知識與理論：\n[說明解題需要的相關知識，包括定律、公式或理論]\n3. 解題流程：\n[逐步推導解答過程，分步驟詳細說明]\n4. 答案：\n[清晰呈現最終答案，並標註所用單位或條件]\n5. 結論：\n[進一步總結或對結果進行說明]\n請按上述格式分段回應，確保清晰、條理分明。'
+                                },
+                                {
+                                    inline_data: {
+                                        mime_type: 'image/jpeg',
+                                        data: base64Image
+                                    }
+                                }
+                            ]
+                        }
+                    ]
+                };
+            } else if (textInput.value.trim()) {
+                payload = {
+                    contents: [
+                        {
+                            parts: [
+                                {
+                                    text: `請扮演該領域的專家，按照以下格式進行解題並回答：\n1. 題意分析：\n[清楚描述題目內容，並標示關鍵資訊]\n2. 相關知識與理論：\n[說明解題需要的相關知識，包括定律、公式或理論]\n3. 解題流程：\n[逐步推導解答過程，分步驟詳細說明]\n4. 答案：\n[清晰呈現最終答案，並標註所用單位或條件]\n5. 結論：\n[進一步總結或對結果進行說明]\n\n題目內容：${textInput.value.trim()}`
+                                }
+                            ]
+                        }
+                    ]
+                };
+            } else {
+                alert('請提供圖片或文字內容！');
+                return;
+            }
+
+            const response = await fetch(
+                `https://generativelanguage.googleapis.com/v1/models/gemini-1.5-flash:generateContent?key=AIzaSyA5japu-01mqUn7EXxGDy1za098_leIxdQ`,
+                {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify(payload),
+                }
+            );
+
+            const responseData = await response.json();
+            const answer = getNestedValue(responseData, 'text') || '無法獲取解答';
+
+            // 格式化答案
+            const sections = answer.split(/\d\.\s/).filter((section) => section.trim() !== '');
+            const formattedAnswer = sections
+    .map((section, index) => {
+        return `<p>${section.trim().replace(/\n/g, '<br>')}</p>`;
+    })
+    .join('');
+
+            resultArea.innerHTML = `<div class="question-card">${formattedAnswer}</div>`;
+        } catch (error) {
+            resultArea.innerHTML = `<p class="loading">錯誤：${error.message}</p>`;
+        } finally {
+            button.innerText = '分析題目';
+            button.disabled = false;
+        }
+    }
+
+    // 遞歸獲取 JSON 嵌套值
+    function getNestedValue(data, key) {
+        if (typeof data === 'object') {
+            for (const [k, v] of Object.entries(data)) {
+                if (k === key) return v;
+                const nestedValue = getNestedValue(v, key);
+                if (nestedValue) return nestedValue;
+            }
+        }
+        return null;
+    }
+
+    async function convertImageToBase64(imageFile) {
+        return new Promise((resolve, reject) => {
+            const reader = new FileReader();
+            reader.onload = () => resolve(reader.result.split(',')[1]); // 返回Base64內容
+            reader.onerror = (error) => reject(error);
+            reader.readAsDataURL(imageFile);
+        });
+    }
+</script>
 </body>
 </html>
-
-
