--- a/webBot.html
+++ b/webBot.html
@@ -6,276 +6,305 @@
     <title>隨身家教</title>
     <style>
         /* 主頁樣式 */
-        body {
-            margin: 0;
-            font-family: 'Arial', sans-serif;
-            display: flex;
-            flex-direction: column; 
-            min-height: 100vh;
-            background-color: #f7f6f2;
-        }
+body {
+    margin: 0;
+    font-family: 'Arial', sans-serif;
+    display: flex;
+    flex-direction: column; 
+    min-height: 100vh;
+    background-color: #f7f6f2;
+}
 
-        .container {
-            flex: 1;
-            display: flex;
-            overflow: hidden;
-        }
+.container {
+    flex: 1;
+    display: flex;
+    overflow: hidden;
+}
 
-        .sidebar {
-            width: 250px;
-            background-color: #f0f0f0;
-            color: #333;
-            display: flex;
-            flex-direction: column;
-            transition: transform 0.3s ease;
-            z-index: 1000;
-            box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-        }
+.sidebar {
+    width: 250px;
+    background-color: #f0f0f0;
+    color: #333;
+    display: flex;
+    flex-direction: column;
+    transition: transform 0.3s ease;
+    z-index: 1000;
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+}
 
-        /* 移動端初始隱藏側邊欄 */
-        @media (max-width: 768px) {
-            .sidebar {
-                position: absolute;
-                height: 100%;
-                top: 0;
-                left: 0;
-                transform: translateX(-250px);
-            }
+/* 移動端初始隱藏側邊欄 */
+@media (max-width: 768px) {
+    .sidebar {
+        position: absolute;
+        height: 100%;
+        top: 0;
+        left: 0;
+        transform: translateX(-250px);
+    }
 
-            .sidebar.show {
-                transform: translateX(0);
-            }
-        }
+    .sidebar.show {
+        transform: translateX(0);
+    }
+}
 
-        .sidebar-header {
-            padding: 20px;
-            text-align: center;
-            font-size: 20px;
-            font-weight: bold;
-            background-color: #f0f0f0;
-        }
+.sidebar-header {
+    padding: 20px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    background-color: #f0f0f0;
+}
 
-        .sidebar-menu {
-            flex: 1;
-            padding: 10px;
-        }
+.sidebar-menu {
+    flex: 1;
+    padding: 10px;
+}
 
-        .menu-item {
-            padding: 10px;
-            cursor: pointer;
-            border-radius: 5px;
-            transition: background-color 0.2s ease, color 0.2s ease;
-            color: #333;
-        }
+.menu-item {
+    padding: 10px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.2s ease, color 0.2s ease;
+    color: #333;
+}
 
-        .menu-item:hover {
-            background-color: #d9d9d9;
-            color: #000;
-        }
+.menu-item:hover {
+    background-color: #d9d9d9;
+    color: #000;
+}
 
-        .menu-item.hidden {
-            display: none;
-        }
+.menu-item.hidden {
+    display: none;
+}
 
-        .main-content {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            background-color: #fafafa;
-            overflow: hidden;
-        }
+.main-content {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    background-color: #fafafa;
+    overflow: hidden;
+}
 
-        .header {
-            position: relative; 
-            z-index: 1001;     
-            background-color: #8ab0ab;
-            color: white;
-            padding: 10px;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
+.header {
+    position: relative; 
+    z-index: 1001;     
+    background-color: #8ab0ab;
+    color: white;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 
-        .header .menu-toggle {
-            display: none;
-            font-size: 24px;
-            cursor: pointer;
-        }
+.header .menu-toggle {
+    display: none;
+    font-size: 24px;
+    cursor: pointer;
+}
 
-        @media (max-width: 768px) {
-            .header .menu-toggle {
-                display: block;
-            }
+@media (max-width: 768px) {
+    .header .menu-toggle {
+        display: block;
+    }
 
-            .main-content {
-                flex: 1;
-                margin-left: 0;
-            }
-        }
+    .main-content {
+        flex: 1;
+        margin-left: 0;
+    }
+}
 
-        /* 聊天窗口 */
-        .chat-window {
-            flex: 1;
-            overflow-y: auto;
-            padding: 15px;
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-            background-color: white;
-        }
+/* 聊天窗口 */
+.chat-window {
+    flex: 1;
+    overflow-y: auto;
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    background-color: #e5ddd5;
+}
 
-        /* 聊天訊息的基礎樣式 */
-        .message {
-            display: flex;
-            max-width: 80%;
-            padding: 10px 15px;
-            border-radius: 15px;
-            margin: 5px 0;
-            word-wrap: break-word;
-            animation: fadeIn 0.3s ease-in;
-        }
+/* 聊天訊息的基礎樣式 */
+.message {
+    display: flex;
+    max-width: 80%;
+    padding: 10px 15px;
+    border-radius: 15px;
+    margin: 5px 0;
+    word-wrap: break-word;
+    animation: fadeIn 0.3s ease-in;
+}
 
-        /* 使用者訊息樣式（右側） */
-        .user-message {
-            align-self: flex-end;
-            background-color: #DCF8C6; /* 淺綠色背景 */
-            justify-content: flex-end;
-        }
+/* 使用者訊息樣式（右側） */
+.user-message {
+    align-self: flex-end;
+    background-color: #DCF8C6; /* 淺綠色背景 */
+    justify-content: flex-end;
+}
 
-        /* 機器人訊息樣式（左側） */
-        .bot-message {
-            align-self: flex-start;
-            background-color:   #ECF5FF; /* 白色背景 */
-            justify-content: flex-start;
-        }
+/* 機器人訊息樣式（左側） */
+.bot-message {
+    align-self: flex-start;
+    background-color: #FFFFFF; /* 白色背景 */
+    justify-content: flex-start;
+}
 
-        /* 訊息內的圖片樣式 */
-        .message img {
-            max-width: 150px;
-            border-radius: 10px;
-        }
+/* 訊息內的圖片樣式 */
+.message img {
+    max-width: 150px;
+    border-radius: 10px;
+}
 
-        /* 滾動條樣式（可選） */
-        .chat-window {
-            scrollbar-width: thin;
-            scrollbar-color: #ccc transparent;
-        }
+/* 滾動條樣式（可選） */
+.chat-window {
+    scrollbar-width: thin;
+    scrollbar-color: #ccc transparent;
+}
 
-        .chat-window::-webkit-scrollbar {
-            width: 8px;
-        }
+.chat-window::-webkit-scrollbar {
+    width: 8px;
+}
 
-        .chat-window::-webkit-scrollbar-track {
-            background: transparent;
-        }
+.chat-window::-webkit-scrollbar-track {
+    background: transparent;
+}
 
-        .chat-window::-webkit-scrollbar-thumb {
-            background-color: #ccc;
-            border-radius: 4px;
-        }
+.chat-window::-webkit-scrollbar-thumb {
+    background-color: #ccc;
+    border-radius: 4px;
+}
 
-        /* 輸入區域樣式 */
-        .input-area {
-            display: flex;
-            padding: 10px;
-            border-top: 1px solid #ddd;
-            background-color: white;
-            align-items: center;
-            gap: 10px;
-            flex-shrink: 0; 
-        }
+/* 輸入區域樣式 */
+.input-area {
+    display: flex;
+    padding: 10px;
+    border-top: 1px solid #ddd;
+    background-color: white;
+    align-items: center;
+    gap: 10px;
+    flex-shrink: 0; 
+}
 
-        .upload-button {
-            background-color: #8ab0ab;
-            color: white;
-            border: none;
-            border-radius: 20px;
-            padding: 10px 15px;
-            cursor: pointer;
-            position: relative;
-        }
+.upload-button {
+    background-color: #8ab0ab;
+    color: white;
+    border: none;
+    border-radius: 20px;
+    padding: 10px 15px;
+    cursor: pointer;
+    position: relative;
+}
 
-        .upload-button:hover {
-            background-color: #6e928b;
-        }
+.upload-button:hover {
+    background-color: #6e928b;
+}
 
-        .upload-button input[type="file"] {
-            position: absolute;
-            left: 0;
-            top: 0;
-            opacity: 0;
-            width: 100%;
-            height: 100%;
-            cursor: pointer;
-        }
+.upload-button input[type="file"] {
+    position: absolute;
+    left: 0;
+    top: 0;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+}
 
-        #user-input {
-            flex: 1;
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 20px;
-            outline: none;
-        }
+#user-input {
+    flex: 1;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 20px;
+    outline: none;
+}
 
-        #send-button {
-            padding: 10px 20px;
-            background-color: #8ab0ab;
-            color: white;
-            border: none;
-            border-radius: 20px;
-            cursor: pointer;
-        }
+#send-button {
+    padding: 10px 20px;
+    background-color: #8ab0ab;
+    color: white;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+}
 
-        #send-button:hover {
-            background-color: #6e928b;
-        }
+#send-button:hover {
+    background-color: #6e928b;
+}
 
-        .image-preview {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            margin-top: 5px;
-        }
+.image-preview {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-top: 5px;
+}
 
-        .image-preview img {
-            max-width: 50px;
-            border-radius: 10px;
-        }
+.image-preview img {
+    max-width: 50px;
+    border-radius: 10px;
+}
 
-        .image-preview .delete-button {
-            background-color: red;
-            color: white;
-            border-radius: 50%;
-            width: 20px;
-            height: 20px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 12px;
-            cursor: pointer;
-        }
+.image-preview .delete-button {
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 12px;
+    cursor: pointer;
+}
 
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-                transform: translateY(10px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(10px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
 
-        /* 防止樣式衝突的命名空間 */
-        /* AI素養題產生器 */
-        .ai-generator-container * {
-            box-sizing: border-box;
-        }
+/* 防止樣式衝突的命名空間 */
+/* AI素養題產生器 */
+.ai-generator-container * {
+    box-sizing: border-box;
+}
 
-        /* 教我解題 */
-        .solve-problem-container * {
-            box-sizing: border-box;
-        }
+/* 教我解題 */
+.solve-problem-container * {
+    box-sizing: border-box;
+}
+
+/* 手機設備的特定樣式 */
+@media (max-width: 768px) {
+    /* 固定輸入區域在底部 */
+    .input-area {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        z-index: 100;
+        padding: 10px;
+        background-color: white;
+        border-top: 1px solid #ddd;
+        box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+    }
+
+    /* 調整聊天窗口的底部間距，以避免被固定的輸入區域覆蓋 */
+    .chat-window {
+        padding-bottom: 70px; /* 根據輸入區域的高度調整 */
+    }
+
+    /* 確保主內容區域的高度不超過視窗 */
+    .main-content {
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+    }
+}
+
     </style>
 </head>
 <body>
