--- a/webBot.html
+++ b/webBot.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>隨身家教</title>
     <style>
-        /* 主頁樣式 */
+       /* 主頁樣式 */
 body {
     margin: 0;
     font-family: 'Arial', sans-serif;
@@ -121,7 +121,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    background-color: #e5ddd5;
+    background-color: white;
 }
 
 /* 聊天訊息的基礎樣式 */
@@ -145,7 +145,7 @@ body {
 /* 機器人訊息樣式（左側） */
 .bot-message {
     align-self: flex-start;
-    background-color: #FFFFFF; /* 白色背景 */
+    background-color: #ECF5FF; /* 白色背景 */
     justify-content: flex-start;
 }
 
@@ -277,7 +277,7 @@ body {
     box-sizing: border-box;
 }
 
-/* 手機設備的特定樣式 */
+/* 手機視窗樣式調整 */
 @media (max-width: 768px) {
     /* 固定輸入區域在底部 */
     .input-area {
@@ -302,6 +302,281 @@ body {
         height: 100vh;
         display: flex;
         flex-direction: column;
+    }
+
+    /* 確保 AI素養題產生器和教我解題區域不被覆蓋 */
+    .external-content {
+        padding-bottom: 70px; /* 同樣避免被固定的輸入區域覆蓋 */
+    }
+}
+
+/* AI素養題產生器樣式 */
+.ai-generator-container {
+    max-width: 800px;
+    margin: 0 auto;
+    background: linear-gradient(to bottom right, #ffffff, #f8f9fa);
+    padding: 30px;
+    border-radius: 15px;
+    box-shadow: 0 8px 30px rgba(0, 0, 0, 0.1);
+}
+
+.ai-generator-container h1 {
+    text-align: center;
+    color: #8ab0ab;
+    margin-bottom: 30px;
+    font-weight: bold;
+}
+
+.ai-generator-container .form-group {
+    margin-bottom: 20px;
+}
+
+.ai-generator-container label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+    color: #333;
+}
+
+.ai-generator-container input[type="text"],
+.ai-generator-container textarea,
+.ai-generator-container select {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    font-size: 16px;
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+}
+
+.ai-generator-container textarea {
+    min-height: 100px;
+}
+
+.ai-generator-container .button-group {
+    display: flex;
+    gap: 10px;
+    margin-bottom: 20px;
+    justify-content: center;
+}
+
+.ai-generator-container button {
+    background-color: #8ab0ab;
+    color: white;
+    border: none;
+    padding: 14px 28px;
+    border-radius: 8px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: background-color 0.3s, transform 0.2s;
+    font-size: 18px;
+}
+
+.ai-generator-container button:hover {
+    background-color: #6e928b;
+    transform: scale(1.05);
+}
+
+.ai-generator-container .result-area {
+    display: none;
+    border: 1px solid #ddd;
+    padding: 20px;
+    border-radius: 8px;
+    margin-top: 20px;
+    background-color: #ffffff;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.ai-generator-container .question-card {
+    border: 1px solid #ddd;
+    border-radius: 12px;
+    padding: 20px;
+    margin-bottom: 20px;
+    background-color: #ffffff;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.ai-generator-container .question-card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
+}
+
+.ai-generator-container .question-options label {
+    display: block;
+    padding: 12px;
+    margin-bottom: 8px;
+    border-radius: 8px;
+    border: 1px solid #ddd;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.ai-generator-container .question-options label:hover {
+    background-color: #8ab0ab;
+    color: white;
+}
+
+.ai-generator-container .correct-answer {
+    color: #28a745;
+    font-weight: bold;
+}
+
+.ai-generator-container .wrong-answer {
+    color: #dc3545;
+    font-weight: bold;
+}
+
+.ai-generator-container .explanation {
+    margin-top: 10px;
+    font-style: italic;
+    color: #333;
+}
+
+.ai-generator-container .your-answer {
+    margin-top: 5px;
+}
+
+.ai-generator-container .submit-button {
+    display: block;
+    margin: 30px auto;
+    background-color: #8ab0ab;
+    color: white;
+    border: none;
+    padding: 14px 28px;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 18px;
+    font-weight: bold;
+    transition: background-color 0.3s, transform 0.2s;
+}
+
+.ai-generator-container .submit-button:hover {
+    background-color: #6e928b;
+    transform: scale(1.05);
+}
+
+.ai-generator-container .loading {
+    text-align: center;
+    color: #333;
+    font-weight: bold;
+    font-size: 16px;
+    margin-top: 20px;
+}
+
+/* 教我解題樣式 */
+.solve-problem-container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+}
+
+.solve-problem-container h1 {
+    font-size: 1.8rem;
+    margin-bottom: 20px;
+    text-align: center;
+    color: #8ab0ab;
+}
+
+.solve-problem-container .tab-switch {
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 10px;
+}
+
+.solve-problem-container .tab-button {
+    padding: 10px;
+    flex-grow: 1;
+    text-align: center;
+    cursor: pointer;
+    background-color: #e9e9e9;
+    border: 1px solid #ccc;
+    border-radius: 4px 4px 0 0;
+    transition: background-color 0.3s;
+}
+
+.solve-problem-container .tab-button.active {
+    background-color: #fff;
+    border-bottom: 2px solid #8ab0ab;
+}
+
+.solve-problem-container .tab-content {
+    display: none;
+    padding: 15px;
+    border: 1px solid #ccc;
+    border-top: none;
+    border-radius: 0 0 8px 8px;
+}
+
+.solve-problem-container .tab-content.active {
+    display: block;
+}
+
+.solve-problem-container .form-group {
+    margin-bottom: 20px;
+}
+
+.solve-problem-container label {
+    display: block;
+    font-size: 1rem;
+    margin-bottom: 5px;
+}
+
+.solve-problem-container input,
+.solve-problem-container textarea {
+    width: 100%;
+    padding: 10px;
+    font-size: 1rem;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.solve-problem-container .button-group {
+    text-align: center;
+    margin-top: 20px;
+}
+
+.solve-problem-container button {
+    background-color: #8ab0ab;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 1rem;
+    cursor: pointer;
+    border-radius: 4px;
+    transition: background-color 0.3s, transform 0.2s;
+}
+
+.solve-problem-container button:hover {
+    background-color: #6e928b;
+    transform: scale(1.05);
+}
+
+.solve-problem-container .result-area {
+    margin-top: 20px;
+    display: none;
+}
+
+.solve-problem-container .loading {
+    font-style: italic;
+    color: #888;
+}
+
+.solve-problem-container .question-card {
+    background-color: #f1f1f1;
+    padding: 15px;
+    border-radius: 4px;
+    margin-top: 10px;
+}
+
+/* AI素養題產生器和教我解題區域在手機上的底部間距調整 */
+@media (max-width: 768px) {
+    .ai-generator-container,
+    .solve-problem-container {
+        padding-bottom: 20px; /* 確保內容不被輸入區域遮蓋 */
     }
 }
 
